# packright

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md
src/packright/: __init__.py  _config.py  _messages.py  _templates.py  browse.py  check.py  cli.py  doctor.py  errors.py  init_interactive.py  scaffold.py  use_changelog.py  use_contributing.py  use_coverage.py  use_dep.py  use_docker.py  use_errors.py  use_git.py  use_github.py  use_github_actions.py  use_gitlab_ci.py  use_license.py  use_mkdocs.py  use_module.py  use_mypy.py  use_pre_commit.py  use_pytest.py  use_readme.py  use_rich.py  use_ruff.py  use_version.py
src/packright/templates/: README.md.j2  __init__.py.j2  _messages.py.j2  conftest.py.j2  core.py.j2  docs_api.md.j2  docs_index.md.j2  errors.py.j2  gitignore.j2  mkdocs.yml.j2  pyproject.toml.j2  scaffold_readme.md.j2  test_core.py.j2
tests/: conftest.py  test_browse.py  test_check.py  test_cli.py  test_doctor.py  test_errors.py  test_scaffold.py  test_use_changelog.py  test_use_contributing.py  test_use_coverage.py  test_use_dep.py  test_use_docker.py  test_use_errors.py  test_use_git.py  test_use_github.py  test_use_github_actions.py  test_use_gitlab_ci.py  test_use_license.py  test_use_mkdocs.py  test_use_module.py  test_use_mypy.py  test_use_pre_commit.py  test_use_pytest.py  test_use_readme.py  test_use_rich.py  test_use_ruff.py  test_use_version.py
