[project]
name = "packright"
version = "0.1.0"
description = "Automate Python package development the right way — inspired by R's usethis."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nareman", email = "nareman@users.noreply.github.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13.0",
    "click>=8.1",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/Naareman/packright"
Repository = "https://github.com/Naareman/packright"
Issues = "https://github.com/Naareman/packright/issues"

[project.scripts]
packright = "packright.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/packright"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=packright --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
